overflow fixed

--- a/src/app/Home/Home.component.scss
+++ b/src/app/Home/Home.component.scss
@@ -4,6 +4,7 @@
 .container{
     max-width:100%;
     padding: 0px;
+    margin:0px
 }
 
 #season{
