--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,6 +3,8 @@
 .container{
   font-size: .8em;
   width: 90%;
+  margin-bottom: 0;
+  margin-top:13rem
 }
 .wrapper{
   display: flex;
@@ -33,6 +35,7 @@
 }
 
 .privacy{
+  padding-bottom: 1rem;
   color:white;
 display: flex;
 margin:1rem 0rem;
