--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,7 +115,7 @@ margin-bottom: 5rem !important;
 
 .owl-item {
   margin: 1em;
-max-width: 250px;   
+max-width: 260px;   
 }
 
 
